--- a/css/main.css
+++ b/css/main.css
@@ -38,3 +38,131 @@ video {
   block-size: auto;
   vertical-align: middle;
 }
+
+/* .row + .row {
+  margin-top: 16px;
+}
+
+.row > .col,
+.row > [class^="col-"] {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background-color: rgba(86, 61, 124, 0.15);
+  border: 1px solid rgba(86, 61, 124, 0.2);
+} */
+
+h1 {
+  color: #000;
+  text-align: center;
+  font-family: DM Serif Display;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.lightgrey {
+  color: #b3b3b3;
+  font-family: Heebo;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+}
+
+.author {
+  text-align: center;
+  color: #000;
+  font-family: Heebo;
+  font-size: 10px;
+  font-style: normal;
+  margin: 0 10px 30px 10px;
+}
+
+.author-review {
+  color: #000;
+  font-family: Heebo;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px; /* 200% */
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+img {
+  width: 100%;
+}
+
+.subtitle {
+  color: #000;
+  font-family: Heebo;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23px; /* 127.778% */
+  margin: 0 20px 20px 20px;
+}
+
+p {
+  color: #000;
+  font-family: Heebo;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin: 20px 20px 30px 20px;
+}
+
+.gabriel {
+  color: #000;
+  font-family: DM Serif Display;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 118.182% */
+  margin: 25px 20px 20px 25px;
+}
+
+.mia {
+  color: #000;
+  text-align: center;
+  font-family: DM Serif Display;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 118.182% */
+  margin-bottom: 50px;
+  margin-top: 25px;
+}
+
+.review {
+  color: #000;
+  font-family: Heebo;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 50px; /* 416.667% */
+  background-color: #eee;
+  padding: 0 20px 0 20px;
+}
+
+.article {
+  color: #000;
+  text-align: center;
+  font-family: Heebo;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  margin: 25px 10px 50px 10px;
+}
+
+.article-review {
+  color: #000;
+  font-family: Heebo;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 23px; /* 127.778% */
+  margin: 25px 20px 0px 20px;
+}
