--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,9 @@ video {
   background-color: rgba(86, 61, 124, 0.15);
   border: 1px solid rgba(86, 61, 124, 0.2);
 } */
-
+body {
+  background-color: #f7f7f7;
+}
 h1 {
   color: #000;
   text-align: center;
@@ -59,6 +61,7 @@ h1 {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  background: #fff;
 }
 
 .lightgrey {
@@ -165,4 +168,8 @@ p {
   font-weight: 700;
   line-height: 23px; /* 127.778% */
   margin: 25px 20px 0px 20px;
+}
+
+.news {
+  background-color: rgb(113, 139, 171);
 }
